[package]
name = "custom_os"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none",
]
test-timeout = 300
test-success-exit-code = 33

#[package.metadata.bootloader]
#map-physical-memory = true

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[profile.dev]
#panic = "abort" # commented to allow running tests

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
#bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.9.4"
x86_64 = "0.14.2"
uart_16550 = "0.2.18"
pic8259 = "0.10.1"
pc-keyboard = "0.5.1"
bootloader = { version = "0.9.18", features = [ "map_physical_memory" ] }
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
bootloader-locator = "0.0.4"
